grafana/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana-deployment
  labels:
    app: grafana
spec:
  replicas: 1 # รัน Pod พร้อมกัน 1 ตัว
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      containers:
      - name: grafana-container
        image: grafana/grafana:latest
        ports:
        - containerPort: 3000
        volumeMounts:
        - name: grafana-volume
          mountPath: /var/lib/grafana/data
        resources: # กำหนดการใช้ Resource (วิศวกรที่ดีต้องใส่เสมอ)
          limits:
            cpu: "1000m"
            memory: "1024Mi"
          requests:
            cpu: "500m"
            memory: "512Mi"
      volumes:
      - name: grafana-volume
        persistentVolumeClaim:
          claimName: grafana-volume-claim # ต้องตรงกับชื่อ PVC ที่เราสร้างไว้ใน grafana-pvc.yaml (PVC)
